# text-insights-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Framework/: .gitignore  README.md  sampledf.py  solvessl.py  spark.py
Framework/nlp/: regex.py  tokenize.py
Framework/process_miner/: base.py  session.py
Framework/utils/: __init__.py  plot.py  web.py
notebooks/: DowJones.ipynb  __init__.py  init.py  plain_solution.py  telekom-data-analytics.ipynb
