[project]
classifiers = [
    "License :: OSI Approved :: All rights reserved (c) Israel Llorens",
]
name = "Framework"
version = "0.1.0"
description = "Librería común para desarrollo Spark y soporte al mismo para Ingeniería de Datos y Ciencia"
authors = [{"name" = "Israel Llorens", "email" = "sanchezis@hotmail.com"}]
license = "All rights reserved (c) Israel Llorens"  # SPDX expression
readme = "README.md"
requires-python = ">=3.11,<3.14"


dependencies = [
    "pyspark==3.4.4",
    "networkx>=3.4.2",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "statsmodels>=0.14.4",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "certifi>=2025.1.31",
    "numpy (==1.26.4)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "graphframes (>=0.6,<0.7)",
    "pm4py (>=2.7.14.4,<3.0.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "nbformat (>=4.2.0)",
    "pgmpy (>=1.0.0,<2.0.0)",
    "llama-stack (>=0.2.2,<0.3.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "transformers (==4.50.3)",
    "protobuf (>=6.30.2,<7.0.0)",
    "pyarrow (==12.0.1)",
    "py4j (==0.10.9.7)",
    "accelerate (>=1.6.0,<2.0.0)",
    "openllm (>=0.6.30,<0.7.0)",
    "spark-nlp (==5.2.0)",
    "spacy (==3.7.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"